--- a/src/cone/activities/browser/static/activities.css
+++ b/src/cone/activities/browser/static/activities.css
@@ -1,14 +1,20 @@
-.activity_editor canvas {
+.activity_editor {
+	position:relative;
+    margin-bottom:1em;
+}
+.activity_editor .flow {
+    position: absolute;
+    left:1px;
+    top:1px;
+}
+.activity_editor .diagram {
+	position: absolute;
+	left:0;
+	top:0;
+	z-index:1;
 	border:#aaa 1px solid;
 }
-.activity_editor {
-	margin-bottom:1em;
-}
-.runtests {
-	text-decoration:none;
-	color:red;
-	font-weight:bold;
-}
 .qunit {
+	margin-top:1em;
 	display:none;
 }
