--- a/src/cone/activities/browser/static/activities.css
+++ b/src/cone/activities/browser/static/activities.css
@@ -1,54 +1,63 @@
 /*  general */
 body {
-	font-size:12px;
-	font-family:verdana;
+    font-size:12px;
+    font-family:verdana;
 }
 
 /* editor */
 .activity_editor {
-	position:relative;
+    position:relative;
 }
 
 /* properties */
 .activity_editor .element_properties {
-	position:absolute;
-	top:22px;
-	left:0px;
-	width:190px; /* 10px total padding */
-	height:440px; /* 10px total padding */
-	background-color:#ffffee;
-	border:#aaa 1px solid;
-	border-right:none;
-	padding:5px;
+    font-size:10px;
+    position:absolute;
+    top:22px;
+    left:0px;
+    width:190px; /* 10px total padding */
+    height:440px; /* 10px total padding */
+    background-color:#ffffee;
+    border:#aaa 1px solid;
+    border-right:none;
+    padding:5px;
 }
 .activity_editor .element_properties .props {
-	border-top:#ccc 1px solid;
-	margin-top:5px;
-	padding-top:5px;
+    border-top:#ccc 1px solid;
+    margin-top:5px;
+    padding-top:5px;
 }
 .activity_editor .element_properties .props .field {
-	margin-bottom:5px;
+    margin-bottom:5px;
 }
 .activity_editor .element_properties .props .field label {
-	font-weight:bold;
+    font-weight:bold;
 }
-.activity_editor .element_properties .props input {
-	width:188px;
+
+.activity_editor .element_properties input,
+.activity_editor .element_properties textarea {
+    font-size:10px;
+}
+.activity_editor .element_properties input {
+    width:188px;
+}
+.activity_editor .element_properties .update {
+    width:90px;
 }
 .activity_editor .element_properties .status {
-	position:absolute;
-	bottom:0px;
-	padding-top:2px;
-	border-top:#ccc 1px solid;
-	width:190px;
-	height:70px;
+    position:absolute;
+    bottom:0px;
+    padding-top:2px;
+    border-top:#ccc 1px solid;
+    width:190px;
+    height:60px;
 }
 
 /* diagram */
 .activity_diagram {
-	position:absolute;
-	top:22px;
-	left:200px;
+    position:absolute;
+    top:22px;
+    left:200px;
     margin-bottom:1em;
 }
 .activity_diagram .control {
@@ -57,11 +66,11 @@ body {
     top:1px;
 }
 .activity_diagram .diagram {
-	position: absolute;
-	left:0;
-	top:0;
-	z-index:1;
-	border:#aaa 1px solid;
+    position: absolute;
+    left:0;
+    top:0;
+    z-index:1;
+    border:#aaa 1px solid;
 }
 
 /* actions */
@@ -73,29 +82,24 @@ body {
     height:22px;
 }
 .activity_editor .actions .section {
-	float:left;
-	padding-left:22px;
-	padding-right:22px;
-	padding-top:2px;
-	border-right:#ccc 1px solid;
+    float:left;
+    padding-left:22px;
+    padding-right:22px;
+    padding-top:2px;
+    border-right:#ccc 1px solid;
 }
 .activity_editor .actions a {
-	line-height:16px;
+    line-height:16px;
     padding-left:16px;
-	cursor:pointer;
-	text-decoration:none;
-}
-.activity_editor .actions a.run_tests {
-	background:url('icons/run.png') 50% 50% no-repeat;
-}
-.activity_editor .actions a.flip_layers {
-    background:url('icons/flip.png') 50% 50% no-repeat;
+    cursor:pointer;
+    text-decoration:none;
 }
 .activity_editor .actions a.new {
     background:url('icons/new.png') 50% 50% no-repeat;
 }
 .activity_editor .actions a.open {
     background:url('icons/open.png') 50% 50% no-repeat;
+    display:none;
 }
 .activity_editor .actions a.save {
     background:url('icons/save.png') 50% 50% no-repeat;
@@ -124,10 +128,16 @@ body {
 .activity_editor .actions a.edge {
     background:url('icons/edge.png') 50% 50% no-repeat;
 }
+.activity_editor .actions a.run_tests {
+    background:url('icons/run.png') 50% 50% no-repeat;
+}
+.activity_editor .actions a.flip_layers {
+    background:url('icons/flip.png') 50% 50% no-repeat;
+}
 
 /* tests */
 .qunit {
-	position:relative;
-	top:480px;
-	width:1400px;
+    position:relative;
+    top:480px;
+    width:1400px;
 }
