--- a/src/cone/activities/browser/static/activities.css
+++ b/src/cone/activities/browser/static/activities.css
@@ -45,6 +45,7 @@ body {
     width:90px;
 }
 .activity_editor .element_properties .status {
+    display:none;
     position:absolute;
     bottom:0px;
     padding-top:2px;
@@ -128,6 +129,9 @@ body {
 .activity_editor .actions a.edge {
     background:url('icons/edge.png') 50% 50% no-repeat;
 }
+.activity_editor .actions a.debug {
+    background:url('icons/debug.png') 50% 50% no-repeat;
+}
 .activity_editor .actions a.run_tests {
     background:url('icons/run.png') 50% 50% no-repeat;
 }
@@ -137,6 +141,7 @@ body {
 
 /* tests */
 .qunit {
+    display:none;
     position:relative;
     top:480px;
     width:1400px;
