model node creation

--- a/src/cone/activities/browser/static/activities.css
+++ b/src/cone/activities/browser/static/activities.css
@@ -145,6 +145,9 @@ body {
 .activity_editor .actions a.flip_layers {
     background:url('icons/activities_sprite.png') 0px -299px no-repeat;
 }
+.activity_editor .actions a.delete_element {
+    background:url('icons/activities_sprite.png') 0px -322px no-repeat;
+}
 .activity_editor .actions a.initial_node:hover {
     background-position:-23px 0px;
 }
@@ -186,6 +189,9 @@ body {
 }
 .activity_editor .actions a.flip_layers:hover {
     background-position:-23px -299px;
+}
+.activity_editor .actions a.delete_element:hover {
+    background-position:-23px -322px;
 }
 
 /* tests */
