--- a/src/cone/activities/browser/static/activities.css
+++ b/src/cone/activities/browser/static/activities.css
@@ -15,15 +15,13 @@ body {
 /* properties */
 .activity_editor .element_properties {
     font-size:10px;
-    position:absolute;
-    top:30px;
-    left:0px;
     width:190px; /* 10px total padding */
-    height:440px; /* 10px total padding */
+    height: 100%;
     background-color:#ffffee;
     border:#aaa 1px solid;
     border-right:none;
-    padding:5px;
+    padding: 5px;
+    float:left;
 }
 .activity_editor .element_properties .props {
     border-top:#ccc 1px solid;
@@ -55,11 +53,12 @@ body {
     height:60px;
 }
 
+.activity_editor .diagram_container{
+    padding-top: 2px;
+}
+
 /* diagram */
 .activity_diagram {
-    position:absolute;
-    top:30px;
-    left:200px;
     margin-bottom:1em;
 }
 .activity_diagram .control {
@@ -68,7 +67,6 @@ body {
     top:1px;
 }
 .activity_diagram .diagram {
-    position: absolute;
     left:0;
     top:0;
     z-index:1;
@@ -77,10 +75,6 @@ body {
 
 /* actions */
 .activity_editor .actions {
-    position:absolute;
-    top:0;
-    left:200px;
-    width:1200px;
     height:30px;
 }
 .activity_editor .actions .section {
