--- a/src/cone/activities/browser/static/activities.css
+++ b/src/cone/activities/browser/static/activities.css
@@ -6,48 +6,47 @@ body {
 .hidden {
     display:none;
 }
+.clear {
+    clear: both;
+    border-style: none;
+}
 
 .diagram_container {
-    padding-bottom: 1em;
-}
-/* editor */
-.activity_editor {
-    position:relative;
-}
-
-/* properties */
-.activity_editor .element_properties {
-    font-size:10px;
-    width:190px; /* 10px total padding */
-    height: 100%;
     background-color:#ffffee;
     border:#aaa 1px solid;
-    border-right:none;
-    padding: 5px;
-    float:left;
+    
 }
-.activity_editor .element_properties .props {
+/* properties */
+.diagram_container .element_properties {
+    font-size:10px;
+    width:190px; /* 10px total padding */
+    background-color:#ffffee;
+    padding: 5px;
+    display: inline-block;
+    vertical-align: top;
+}
+.diagram_container .element_properties .props {
     border-top:#ccc 1px solid;
     margin-top:5px;
     padding-top:5px;
 }
-.activity_editor .element_properties .props .field {
+.diagram_container .element_properties .props .field {
     margin-bottom:5px;
 }
-.activity_editor .element_properties .props .field label {
+.diagram_container .element_properties .props .field label {
     font-weight:bold;
 }
-.activity_editor .element_properties input,
-.activity_editor .element_properties textarea {
+.diagram_container .element_properties input,
+.diagram_container .element_properties textarea {
     font-size:10px;
 }
-.activity_editor .element_properties input {
+.diagram_container .element_properties input {
     width:188px;
 }
-.activity_editor .element_properties .update {
+.diagram_container .element_properties .update {
     width:90px;
 }
-.activity_editor .element_properties .status {
+.diagram_container .element_properties .status {
     position:absolute;
     bottom:0px;
     padding-top:2px;
@@ -56,25 +55,23 @@ body {
     height:60px;
 }
 
-.activity_editor .diagram_container{
-    padding-top: 2px;
+
+.diagram_container .canvas_container {
+    display: inline-block;
 }
 
-/* diagram */
-.activity_diagram {
-    margin-bottom:1em;
-}
-.activity_diagram svg {
-    border-style: solid;
+.diagram_container svg {
+    border-left-style: solid;
     border-width: 1px;
-    height: 300px;
+    background-color: white;
+
 }
-.activity_diagram .control {
+.diagram_container .control {
     position: absolute;
     left:1px;
     top:1px;
 }
-.activity_diagram .diagram {
+.diagram_container .diagram {
     left:0;
     top:0;
     z-index:1;
@@ -82,17 +79,25 @@ body {
 }
 
 /* actions */
-.activity_editor .actions {
-    height:30px;
+
+body {
+    padding-top: 30px;
 }
-.activity_editor .actions .section {
+.actions {
+    height:30px;
+    top: 0px;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+}
+.actions .section {
     float:left;
     padding-left:22px;
     padding-right:22px;
     border-right:#ccc 1px solid;
     height:30px;
 }
-.activity_editor .actions a {
+.actions a {
     padding:0;
     margin:0;
     height:23px;
