remove instead of delete - now broken

--- a/tapta/activities.css
+++ b/tapta/activities.css
@@ -133,7 +133,7 @@ body {
 .menubar .new_forkjoin {
     background-position: 0px 252px;
 }
-.menubar .delete {
+.menubar .remove {
     background-position: 0px 46px;
 }
 
