--- a/tapta/activities.css
+++ b/tapta/activities.css
@@ -123,7 +123,7 @@ body {
     background-image: url("icons/activities_sprite.png");
     display: inline-block;
 }
-
+/* XXX: symbol for select */
 .menubar .new_action{
     background-position: 0px 322px;
 }
