removing actions and mimos works

--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -9,6 +9,9 @@ body {
     stroke: green;
     stroke-width: 25;
 }
+.layer.editmode-remove .subtractable {
+    stroke: red;
+}
 .tool {
     cursor: pointer;
 }
