styling of nodes completely via CSS

--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -1,3 +1,8 @@
+.actionnode {
+    fill: edf7ff;
+    stroke: #b5d9ea;
+    stroke-width: 2;
+}
 .arc {
     stroke: #424242;
     stroke-width: 2;
@@ -8,8 +13,27 @@
 body {
     max-width: 960px;
 }
+.decisionnode {
+    fill: #edf7ff;
+    stroke: #b5d9ea;
+    stroke-width: 2;
+}
 .destroyall {
     cursor: pointer;
+}
+.finalnode.inner {
+    fill: #424242;
+}
+.finalnode.outer {
+    fill: white;
+    stroke: #424242;
+    stroke-width: 2;
+}
+.forkjoinnode {
+    fill: #424242;
+}
+.initialnode {
+    fill: #424242;
 }
 .layer.editmode-addnewnode .arc.ctrl {
     opacity: 0.2;
@@ -22,6 +46,9 @@ body {
 }
 .layer.editmode-remove .subtractable {
     stroke: red;
+}
+.mergenode {
+    fill: #424242;
 }
 .mimoctrl {
     fill: None;
