wip: move from controller to operation based edit modes
- subtract edit mode and changer instead of removetool
- layer uses edit modes instead of controller

--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -97,7 +97,10 @@
 .tool {
     cursor: pointer;
 }
-.toolbar .tool.highlight {
+.toolbar .editmodechanger {
+    cursor: pointer;
+}
+.toolbar .editmodechanger.highlight {
     color: green;
 }
 /* scratchpad below here, should be replaced with proper classes */
