mark selected mode with black border instead of green color

--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -98,9 +98,12 @@
 }
 .toolbar .editmodechanger {
     cursor: pointer;
+    border: solid 2px;
+    border-color: white;
+    border-radius: 2px;
 }
 .toolbar .editmodechanger.highlight {
-    color: green;
+    border-color: black;
 }
 /* scratchpad below here, should be replaced with proper classes */
 input {
