selected is marked

--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -54,6 +54,9 @@
     fill: None;
     stroke: None;
 }
+.node .symbol.selected {
+    stroke: green;
+}
 .node.action {
     fill: edf7ff;
     stroke: #b5d9ea;
@@ -63,6 +66,10 @@
     fill: #edf7ff;
     stroke: #b5d9ea;
     stroke-width: 2;
+}
+/* not nice that we need this */
+.node.decmer .decision.symbol.selected {
+    stroke: green;
 }
 .node.decmer .merge.symbol{
     fill: #424242;
