--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -6,7 +6,7 @@
 .addlibaction {
     /* XXX: would be nice to use full available area, not fixed px */
     height: 400px;
-    overflow: scroll;
+    overflow: auto;
 }
 .arc {
     fill: None;
