--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -142,7 +142,7 @@ svg text {
 }
 textarea {
     outline-color: green;
-    width: 100%
+    width: 100%;
 }
 .unsaved {
     outline-color: orange;
