basic decision lib - needs polish - merges are shown, too

--- a/tapta/tapta.css
+++ b/tapta/tapta.css
@@ -3,9 +3,9 @@
     stroke: green;
 }
 /* keep this alphabetically sorted at all costs */
-.addlibaction {
+.addlibnode {
     /* XXX: would be nice to use full available area, not fixed px */
-    height: 400px;
+    height: 190px;
     overflow: auto;
 }
 .arc {
